# universal-trace-lib

./: CMakeLists.txt  README.md
demo/: main.cpp
include/logging/: Event.h  EventBuilder.h  Logger.h  enums.h  log.h
include/logging/channels/: Channel.h  TextFileChannel.h  TextStreamChannel.h
include/logging/sinks/: AsynchronousSink.h  Sink.h  SynchronousSink.h
logging/: EventBuilder.cpp  Logger.cpp  enums.cpp
logging/channels/: TextFileChannel.cpp  TextStreamChannel.cpp
logging/sinks/: AsynchronousSink.cpp  SynchronousSink.cpp
